tests/cases/alloc_certificate/accept/noalloc_hoisted_region.pr
fn tick_region(base : Int) : Int @ noalloc = base + base

fn tick(n : Int) : Int = tick_region(n + 1)
