tests/cases/alloc_certificate/reject/hoisted_region_fresh.pr
type Box = Box(Int)

fn wrap_region(n : Int) : Box @ noalloc = Box(n)

fn wrap(n : Int) : Box = wrap_region(n)
